fix: "ajuste nos apps"

--- a/app/app.json
+++ b/app/app.json
@@ -52,7 +52,8 @@
           "icon": "./assets/notification-icon.png",
           "color": "#0066CC"
         }
-      ]
+      ],
+      "expo-font"
     ],
     "extra": {
       "eas": {
